--- a/.gitmodules
+++ b/.gitmodules
@@ -46,3 +46,6 @@
 [submodule "bundle/vim-nginx"]
 	path = bundle/vim-nginx
 	url = https://github.com/fatih/vim-nginx.git
+[submodule "bundle/conky-syntax"]
+	path = bundle/conky-syntax
+	url = https://github.com/smancill/conky-syntax.vim
