--- a/.gitmodules
+++ b/.gitmodules
@@ -52,4 +52,7 @@
 [submodule "bundle/vim-es6"]
     path = bundle/vim-es6
     url = https://github.com/isRuslan/vim-es6.git
+[submodule "bundle/syntastic"]
+    path = bundle/syntastic
+    url = https://github.com/vim-syntastic/syntastic.git
 
