--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
+[submodule "bundle/ale"]
+    path = bundle/ale
+    url = https://github.com/dense-analysis/ale.git
 [submodule "bundle/conky-syntax"]
     path = bundle/conky-syntax
     url = https://github.com/smancill/conky-syntax.vim
